--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/bravotango/Team-Profile-Generator#readme",
   "dependencies": {
+    "bootstrap-icons": "^1.7.1",
     "inquirer": "^8.2.0"
   },
   "devDependencies": {
