--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/bravotango/Team-Profile-Generator#readme",
   "dependencies": {
     "bootstrap-icons": "^1.7.1",
+    "email-validator": "^2.0.4",
     "inquirer": "^8.2.0"
   },
   "devDependencies": {
